--- a/frontend/components/main-layout/main-layout.module.scss
+++ b/frontend/components/main-layout/main-layout.module.scss
@@ -1,4 +1,8 @@
 .root {
   max-width: 960px;
-  margin: auto;
+  min-height: 800px;
+  margin: 50px auto;
+  background-color: #7B68EE;
+  padding: 30px;
+  box-shadow:  0 0 10px #000000;
 }
