--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway:wght@400&display=swap');
 @import '../utils/UI/sass-variables/scss-variables';
 
 * {
   box-sizing: border-box;
+  font-family: 'Raleway', sans-serif;
 }
 
 body {
