--- a/frontend/components/header/header.module.scss
+++ b/frontend/components/header/header.module.scss
@@ -2,9 +2,9 @@
 
 .header {
   font-size: $headerText;
-  margin: 50px 0;
+  margin-top: 50px;
   width: 100%;
   text-align: center;
-  color: $white;
-  font-family: 'Montserrat', sans-serif;
+  color: $maroon;
+  font-family: 'Archivo Black', sans-serif;
 }
