--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -1,16 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat&family=Raleway:wght@400&display=swap');
 @import '../utils/UI/sass-variables/scss-variables';
 
 * {
   box-sizing: border-box;
-  font-family: 'Raleway', sans-serif;
 }
 
 body {
   padding: 0;
   margin: 0;
-  // background-image: radial-gradient(circle at 0% 0%, #373b52, #252736 51%, #1d1e26)  
-  background-color: $lightGrey
+  background-color: $rosybrown;
+  font-family: 'Raleway', sans-serif;
 }
 
 a {
