--- a/frontend/utils/UI/sass-variables/_colors.scss
+++ b/frontend/utils/UI/sass-variables/_colors.scss
@@ -4,3 +4,7 @@ $lavender: #E6E6FA;
 $lightGrey: #D3D3D3;
 $mediumSlateBlue: #7B68EE;
 $darkSlateBlue: #483D8B;
+$rebeccaPurple: #663399;
+$lightPink: #FFB6C1;
+$rosybrown: #BC8F8F;
+$maroon: #800000;
