--- a/frontend/utils/UI/sass-variables/_sizes.scss
+++ b/frontend/utils/UI/sass-variables/_sizes.scss
@@ -1,6 +1,7 @@
-$small: 12px;
-$smallMedium: 14px;
-$medium: 16px;
-$mediumLarge: 18px;
-$large: 20px;
-$headerText: 70px;
+$small: 14px;
+$smallMedium: 16px;
+$medium: 18px;
+$mediumLarge: 20px;
+$large: 22px;
+$extraLarge: 24px; 
+$headerText: 90px;
