--- a/frontend/components/main-layout/main-layout.module.scss
+++ b/frontend/components/main-layout/main-layout.module.scss
@@ -1,7 +1,8 @@
 .root {
   max-width: 960px;
-  min-height: 800px;
-  margin: 50px auto;
+  min-height: 1000px;
+  margin: auto;
+  margin-bottom: 50px;
   background-color: #7B68EE;
   padding: 30px;
   box-shadow:  0 0 10px #000000;
