--- a/frontend/utils/UI/button/button.module.scss
+++ b/frontend/utils/UI/button/button.module.scss
@@ -1,40 +1,33 @@
+@import '../sass-variables/scss-variables';
 
 .button {
   align-items: center;
-  appearance: none;
   background-color: #FCFCFD;
   border-radius: 4px;
-  border-width: 0;
   box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
   box-sizing: border-box;
-  color: #36395A;
   cursor: pointer;
   display: inline-flex;
   font-family: 'Montserrat', sans-serif;
   height: 48px;
-  line-height: 1;
-  list-style: none;
-  overflow: hidden;
-  padding-left: 16px;
-  padding-right: 16px;
-  text-align: left;
-  text-decoration: none;
+  padding: 0 10px;
   transition: box-shadow .15s,transform .15s;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  white-space: nowrap;
-  will-change: box-shadow,transform;
-  font-size: 18px;
-}
+  font-size: $medium;
 
-.button:focus {
-  box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  &.completed {
+    background: $green;
+    color: $white;
+    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 0 inset;
+  }
 }
 
 .button:hover {
   box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
   transform: translateY(-2px);
+
+  &.completed {
+    box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, green 0 -3px 0 inset;
+  }
 }
 
 .button:active {
