--- a/frontend/utils/UI/sass-variables/_sizes.scss
+++ b/frontend/utils/UI/sass-variables/_sizes.scss
@@ -4,4 +4,5 @@ $medium: 18px;
 $mediumLarge: 20px;
 $large: 22px;
 $extraLarge: 24px; 
-$headerText: 90px;
+$headerTextDesktop: 90px;
+$headerTextMobile: 50px;
