--- a/frontend/features/todos/todo-card/todo-card.module.scss
+++ b/frontend/features/todos/todo-card/todo-card.module.scss
@@ -20,8 +20,16 @@
 }
 
 .todoText {
-  word-break: break-all;
-  width: 85%;
+  word-break: break-word;
+
+
+  @media #{$desktopBreak} {
+    width: 85%;
+  }
+
+  @media #{$mobileBreak} {
+    width: 70%;
+  }
 
   &.completed {
     text-decoration: line-through;
